# mor-rust-code-gui-manager

./: .gitignore  Cargo.toml  MOR_PLAN.md  README.md
assets/: purple_ink.css
assets/css/: automation.css  base.css  controls.css  editor.css  graph.css  layout.css  node_file_manager.css  plugins.css  runelite_sidebar.css
scripts/: build-css.sh
src/: app_state.rs  lib.rs  parser.rs  watcher.rs  wiki_lookup.rs
src/automation/: mod.rs  register_module.rs
src/ui/: controls.rs  editor.rs  file_automation_dialog.rs  graph.rs  mod.rs  mode_switch.rs  node_file_manager.rs  sidebar.rs  toc_panel.rs
src/ui/graph/: calls.rs  data.rs  dependency.rs  file_actions.rs  heatmap.rs  hierarchy.rs  router.rs  types.rs
src/ui/node_file_manager/: data.rs  fs_ops.rs  layout.rs  peek.rs  view.rs
src/ui/plugins/: find_replace.rs  mod.rs  node_editor.rs  wiki_search.rs
